feat: streamline game handler resolution and enhance stage transition logic